5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1649_2446.log
== TEST (2019-04-16 00:32:04) 
-- CODE:
num = int(input("numero"))
n = str(num)
print(format(num(0)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(format(num(0)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:32:18) 
-- CODE:
num = int(input("numero"))
n = str(num)
print(.format(num(0)))
-- ERROR:
File "XXXX", line 3
    print(.format(num(0)))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:32:30) 
-- CODE:
num = int(input("numero"))
n = str(num)
print(format(num(0)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(format(num(0)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:33:15) 
-- CODE:
num = int(input("numero"))
n = str(num)
print(format(num({0}))
-- ERROR:
File "XXXX", line 4
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:33:31) 
-- CODE:
num = int(input("numero"))
n = str(num)
print(format(num([2]))
-- ERROR:
File "XXXX", line 4
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:11) 
-- CODE:
num = int(input("numero"))
print(num%10)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:15) 
-- CODE:
num = int(input("numero"))
print(num%10)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:17) 
-- CODE:
num = int(input("numero"))
print(num%10)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:24) 
-- CODE:
num = int(input("numero"))
print(num%10)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:29) 
-- CODE:
num = int(input("numero"))
print(num%10)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:35:36) 
-- CODE:
num = int(input("numero"))
print(num%100)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:37:33) 
-- CODE:
num = int(input("numero"))
print(num%100/10)
-- OUTPUT:
1.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:37:53) 
-- CODE:
num = int(input("numero"))
print(num//100)
-- OUTPUT:
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:38:00) 
-- CODE:
num = int(input("numero"))
print(num//100)
-- OUTPUT:
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:38:25) 
-- CODE:
num = int(input("numero"))
print(num//10 - num%10)
-- OUTPUT:
8759
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:38:33) 
-- CODE:
num = int(input("numero"))
print(num//10 - num%10)
-- OUTPUT:
8759
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:39:01) 
-- CODE:
num = int(input("numero"))
print(num%10 - num//10)
-- OUTPUT:
-8759
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:39:04) 
-- CODE:
num = int(input("numero"))
print(num%10 - num//10)
-- OUTPUT:
-8759
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:39:07) 
-- CODE:
num = int(input("numero"))
print(num%10 - num//10)
-- OUTPUT:
-8759
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:43:02) 
-- CODE:
num = int(input("numero"))
print(num//100000)%10
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num//100000)%10
TypeError: unsupported operand type(s) for %: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:43:21) 
-- CODE:
num = int(input("numero"))
print((num//100000)%10)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num//100000)%10
TypeError: unsupported operand type(s) for %: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:43:30) 
-- CODE:
num = int(input("numero"))
print((num//100000)%100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num//100000)%10
TypeError: unsupported operand type(s) for %: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:43:36) 
-- CODE:
num = int(input("numero"))
print((num//100000)%100)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(num//100000)%10
TypeError: unsupported operand type(s) for %: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:44:00) 
-- CODE:
num = int(input("numero"))
print((num%100000)//100)
-- OUTPUT:
876
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:44:12) 
-- CODE:
num = int(input("numero"))
print((num%100000)//10000)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:44:20) 
-- CODE:
num = int(input("numero"))
print((num%100000)//10000)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 00:44:25) 
-- CODE:
num = int(input("numero"))
print((num%100000)//10000)
-- EXECUTION TIME:
0.17581
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
8
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
6
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:44:27) 
-- CODE:
num = int(input("numero"))
print((num%100000)//10000)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:44:32) 
-- CODE:
num = int(input("numero"))
print((num%100000)//100000)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:45:10) 
-- CODE:
num = int(input("numero"))
print((num//100000)
-- ERROR:
File "XXXX", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:45:16) 
-- CODE:
num = int(input("numero"))
print(num//100000)
-- ERROR:
File "XXXX", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 00:45:21) 
-- CODE:
num = int(input("numero"))
print(num//100000)
-- ERROR:
File "XXXX", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
